# cs336-assignment1-basics

./: pyproject.toml
cs336_basics/: __init__.py  tokenizer.py
cs336_basics/_cs336_a1_rust/: Cargo.toml
cs336_basics/_cs336_a1_rust/src/: lib.rs  tokenizer.rs
tests/: adapters.py
