[package]
name = "_cs336_a1_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "_cs336_a1_rust"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "anyhow"] }
regex = "1"
fancy-regex = "0.16"
anyhow = "1"
rayon = "1"
escape-bytes = "0.1"

[profile.release]
debug = true
